# Chip_Atlasmcp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Chip_Atlasmcp.dxt  LICENSE  README.md  justfile  manifest.json  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
Chip_Atlasmcp/: Chip_Atlasmcp.py  __init__.py  __main__.py  cli.py  mcp_server.py  utils.py
docs/: index.md  installation.md  usage.md
results/: chip_atlas_TP53.csv  chip_atlas_TP53_analysis_list.csv  chip_atlas_TP53_experiment_list.csv
tests/: __init__.py  test_Chip_Atlasmcp.py
